# python-playground

./: .gitignore  README.md
unit-testing/: README.md  pyproject.toml
unit-testing/tests/: conftest.py
unit-testing/tests/perhitungan_dasar/: test_pengurangan.py
unit-testing/tests/unit_testing/logging/: test_config.py
unit-testing/tests/unit_testing/perhitungan_dasar/: test_pengurangan.py  test_penjumlahan.py
unit-testing/unit_testing/logging/: config.py
unit-testing/unit_testing/perhitungan_dasar/: __main__.py  pengurangan.py  penjumlahan.py
